kubernetes/namespace-docker.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "docker",
    "labels": {
      "name": "docker"
    }
  }
}
