kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: building-apps-deploy
  labels:
    app: kubeacademy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeacademy
  template:
    metadata:
      labels:
        app: kubeacademy
    spec:
      containers:
      - name: building-apps-container
        image: mleon96/week-4:latest
        ports:
        - containerPort: 80
