kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: building-apps-pod
  labels:
    app: kubeacademy
spec:
  containers:
  - name: building-apps-container
    image: mleon96/week-4:latest
