kubernetes/default-service-docker.yaml
apiVersion: v1
kind: Service
metadata:
  name: building-apps-svc
  namespace: default
spec:
  type: ExternalName
  externalName: building-apps-svc.docker.svc.cluster.local
  ports:
  - port: 80
