kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: building-apps-svc
  labels:
    app: kubeacademy
spec:
  type: NodePort
  selector:
    app: kubeacademy
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
